# vessel-backup

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  VesselConfig.h.in  backup_enterprise.cbp  backup_enterprise.depend  backup_enterprise.layout  client.cpp  client.hpp  compress.cpp  compress.hpp  file_iterator.cpp  file_iterator.hpp  local.db  local_db.cpp  local_db.hpp  log.cpp  log.hpp  main.cpp  package-lock.json  tarball.hpp  types.hpp
client/: client.cpp  client.hpp  main.cpp  vessel_client.cpp  vessel_client.hpp
core/: aws_s3_client.cpp  aws_s3_client.hpp  compress.cpp  directory.cpp  directory.hpp  file.cpp  file.hpp  file_iterator.cpp  file_iterator.hpp  hash_util.cpp  hash_util.hpp  http_client.cpp  http_client.hpp  http_request.cpp  http_request.hpp  local_db.cpp  local_db.hpp  log.cpp  s3client.cpp  s3client.hpp  tarball.cpp  types.hpp
docs/: Doxyfile  _sidebar.md  building.md  getting_started.md  index.html  storage.md  vessel_client.md  vessel_server.md
docs/doxygen/: Doxyfile
docs/doxygen/html/: annotated.html  annotated_dup.js  aws__exception_8hpp_source.html  aws__s3__client_8hpp_source.html  azure__client_8hpp_source.html  azure__exception_8hpp_source.html  class_auth.html  class_backup_1_1_database_1_1_local_database-members.html  class_backup_1_1_file_1_1_backup_file-members.html  class_backup_1_1_file_1_1_backup_file.html  class_backup_1_1_file_1_1_file_iterator-members.html  class_backup_1_1_file_1_1_file_iterator.html  class_backup_1_1_networking_1_1_client-members.html  class_backup_1_1_networking_1_1_client.html  class_backup_1_1_networking_1_1_connection__coll__graph.md5  class_backup_1_1_networking_1_1_connection__inherit__graph.md5  class_backup_a_p_i-members.html  class_backup_a_p_i__inherit__graph.map  class_backup_a_p_i__inherit__graph.md5  class_backup_a_p_i_session-members.html  class_backup_a_p_i_session.html  class_backup_machine-members.html  class_backup_session-members.html  class_backup_session.html  class_backup_upload.html  class_backup_user.html  class_vessel_1_1_aws_upload-members.html  class_vessel_1_1_aws_upload.html  class_vessel_1_1_aws_upload.js  class_vessel_1_1_azure_upload-members.html  class_vessel_1_1_azure_upload.html  class_vessel_1_1_azure_upload.js  class_vessel_1_1_compression_1_1_compressor-members.html  class_vessel_1_1_compression_1_1_compressor.html  class_vessel_1_1_compression_1_1_compressor.js  class_vessel_1_1_compression_1_1_tarball-members.html  class_vessel_1_1_compression_1_1_tarball.html  (+194 more)
docs/html/: annotated.html  class_a_p_i-members.html  class_a_p_i.html  class_a_p_i__inherit__graph.map  class_a_p_i__inherit__graph.md5  class_backup_1_1_compression_1_1_compressor-members.html  class_backup_1_1_compression_1_1_compressor.html  class_backup_1_1_compression_1_1_tarball-members.html  class_backup_1_1_compression_1_1_tarball.html  class_backup_1_1_database_1_1_local_database.html  class_backup_1_1_logging_1_1_log-members.html  class_backup_1_1_logging_1_1_log.html  class_backup_1_1_networking_1_1_connection-members.html  class_backup_1_1_networking_1_1_connection.html  class_backup_1_1_networking_1_1_connection__inherit__graph.map  class_backup_1_1_networking_1_1_http_request-members.html  class_backup_1_1_networking_1_1_http_request.html  class_backup_1_1_networking_1_1_server-members.html  class_backup_1_1_networking_1_1_server.html  class_backup_a_p_i.html  class_backup_a_p_i__coll__graph.md5  class_backup_database-members.html  class_backup_database.html  class_backup_file-members.html  class_backup_file.html  class_backup_l_d_a_p-members.html  class_backup_l_d_a_p.html  class_backup_log-members.html  class_backup_log.html  class_backup_machine.html  class_backup_upload-members.html  class_backup_user-members.html  classes.html  compress_8hpp_source.html  dir_2c7cb0494c4d231e326f930c80ba772a.html  dir_38ff6c66be29e60f8cacc2283a399b06.html  dir_41e1742e44e2de38b3bc91f993fed282.html  dir_4831098d6681c5378f010cbf0f67274d.html  dir_6992faf8a9f8a57527ea3f89ebace2a8.html  dir_b4b2e1ae7ab817d3e03ef16ea4ce3db4.html  (+41 more)
docs/latex/: annotated.tex  class_a_p_i.tex  class_auth.tex  class_backup_1_1_compression_1_1_compressor.tex  class_backup_1_1_compression_1_1_tarball.tex  class_backup_1_1_database_1_1_local_database.tex  class_backup_1_1_file_1_1_backup_file.tex  class_backup_1_1_logging_1_1_log.tex  class_backup_1_1_networking_1_1_client.tex  class_backup_1_1_networking_1_1_connection.tex  class_backup_1_1_networking_1_1_connection__coll__graph.md5  class_backup_1_1_networking_1_1_http_request.tex  class_backup_a_p_i__inherit__graph.md5  class_backup_a_p_i_session.tex  class_backup_database.tex  class_backup_l_d_a_p.tex  class_backup_machine.tex  class_backup_user.tex  dir_4270bfced15e0e73154b13468c7c9ad9.tex  dir_59425e443f801f1f2fd8bbe4959a3ccf.tex  dir_db3a54907829b36871118d03417739cd.tex  dir_dc9b8ee5431b38dbff0ecb3504ecd2f9.tex  dir_f6f391c01b053a333ea3909b21869ace.tex  hierarchy.tex  refman.tex  struct_backup_1_1_types_1_1file__directory.tex  struct_backup_1_1_types_1_1http__request.tex
include/vessel/: global.hpp  types.hpp  version.hpp
pkg/: build-deb  vessel_1.0.0_all.deb
run/: local.db  output.txt
run/tmp/: artful-desktop-amd64.iso.tmp.REMOVED.git-id
server/: connection.cpp  server.cpp
server/cpp/: connection.hpp  main.cpp  server.hpp
server/http/: .htaccess  index.php  ldap.php  login.php  logout.php  machines.php  put_test.php  register.php  settings.php  test.php  user.php
server/http.old/: index.php  ldap.php  login.php  users.php
server/vessel/: .gitignore  bootstrap.sh  composer.json  package-lock.json  package.json  semantic.json  webpack.mix.js
sql/: backup.sql  local..db  local.db  local.db-journal  vessel.db  vessel.sql
tests/aws/: aws_client_test.cpp
tests/azure/: azure_blob_test.cpp
tests/client/: client_test.cpp  s3_upload_test.cpp  s3upload_test.cpp  upload_test.cpp
tests/compression/: compress_test.cpp
tests/db/: db_test.cpp  local.db
tests/file_iterator/: file_test.cpp  local.db
tests/mime/: mime.cpp
tests/tarball/: tarball_test.cpp
(+389 files in other folders)
